# cicd-0112358

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  clang-tidy.txt  conanfile.txt  run_conan_install.ps1
.github/workflows/: build.yml  ci.yml
examples/fibonacci_hello_world/: main.cpp
include/: fibonacci.h
src/: fibonacci.cpp
tests/: test_fibonacci.cpp
