cmake_minimum_required(VERSION 3.16)
project(cicd-0112358 VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_library(fibonacci STATIC
    src/fibonacci.cpp
)

target_include_directories(fibonacci PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:include>
)

add_executable(fibonacci_hello_world
    examples/fibonacci_hello_world/main.cpp
)

target_link_libraries(fibonacci_hello_world PRIVATE fibonacci)
